# qa-automation-showcase

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  nightly.yml
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/attachments/: 12b6e65b173578df.json  163940828dbea2ff.json  1699dea491dce4d8.json  19fcf4d0ffec7ab7.json  265f2324aa8c63f.json  28879df9782d4e93.json  37540821129566df.json  38047a65dcb03f9.json  38c6ca18a1d67bfb.json  3d78e22d3f249d6f.json  4cb3662841f7153a.json  4fbaa0e06fd08680.json  51fc2ae28446d5f7.json  5305223af73a5e99.json  59fb46743cfb6d31.json  61b78e6287ede6bf.json  722477b6e0100ae9.json  79c52109cc783859.json  7d527b93364fcca9.json  84a83dd0df913ee1.json  88ff3bd2580585e4.json  963431b3e656424a.json  af6ffd91aa067c70.json  b1b6fb88e24016d2.json  (+6 more)
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: duration-trend.json  history.json
allure-report/widgets/: behaviors.json  duration-trend.json  duration.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
config/: environments.yaml  settings.py
tests/api/: conftest.py  test_auth_api.py  test_booking_crud.py
tests/database/: conftest.py  db_client.py  test_db_integrity.py
tests/robot/: api_smoke.robot  booking_smoke.robot
tests/ui/: conftest.py  test_admin_login.py  test_home_page.py
utils/: assertions.py  data_factory.py
(+485 files in other folders)
